# toponymics-live

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml
backend/: Dockerfile  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/apps/api/: serializers.py  urls.py  views.py
backend/apps/content/: apps.py  context_processors.py  models.py  views.py
backend/apps/content/management/commands/: import_wp.py
backend/apps/content/migrations/: 0001_initial.py  0002_alter_articlepage_body_alter_eventpage_body_and_more.py  0003_platformpage.py  0004_photogalleryindexpage_photogallerypage_galleryimage.py
backend/apps/content/templates/content/: article_page.html  home_page.html  photo_gallery_index_page.html  photo_gallery_page.html  platform_page.html  (+1 more)
backend/apps/content/templatetags/: nav_tags.py  streamfield_tags.py
backend/apps/content/utils/: html_to_streamfield.py
backend/apps/toponyms/: apps.py  blocks.py  models.py  wagtail_hooks.py
backend/apps/toponyms/migrations/: 0001_initial.py  0002_normalize_feature_type_case.py
backend/static/css/: bibtex.css  lightbox.css  main.css  main.input.css
backend/static/js/: bibtex.js  lightbox.js
backend/static/map/: README.txt  toponymics-map.css  toponymics-map.umd.js  toponymics-map.umd.js.map
backend/templates/: 404.html  500.html  base.html
backend/templates/includes/: footer_links.html  language_switcher.html  main_menu.html  streamfield.html  streamfield_inner.html
backend/toponymics/: settings.py  urls.py  wsgi.py
(+53 files in other folders)
