[project]
name = "toponymics-backend"
version = "0.1.0"
description = "Wagtail + Django REST backend for toponymics-live.net"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.2",
    "wagtail>=6.3,<6.4",
    "wagtail-localize>=1.11",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "django-redis>=5.4",
    "Pillow>=10.4",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "python-dotenv>=1.0",
    "django-environ>=0.11",
    "pandas",
    "openpyxl"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ipython>=8.0",
]
